fix nav link height and spacing

--- a/styles/_base.less
+++ b/styles/_base.less
@@ -71,6 +71,9 @@ dt {
 \*++++++++++++++++++++++++++++++++*/
 a {
   color: @color_asce_link;
+  &:not([href]) {
+    opacity: initial; // undo xmeter
+  }
   &:hover {
     color: @color_asce_link_hover;
   }
