--- a/styles/_comp.Button.less
+++ b/styles/_comp.Button.less
@@ -28,6 +28,7 @@ a.button {
   cursor: pointer;
 
   &:hover, a:visited, a:focus {
+    text-decoration: none;
     background-color: lighten(@color_asce_btn_bg, 5%);
     color: @color_asce_btn_txt; // why does this even exist
   }
