--- a/styles/_comp.LinkBlock.less
+++ b/styles/_comp.LinkBlock.less
@@ -15,7 +15,6 @@
 .link-block h3 {
   opacity: .7;
   text-transform: uppercase;
-  margin: 0;
   font-weight: 600;
   font-size: 18px;
   @media (max-width: 989px) {
@@ -23,20 +22,22 @@
   }
 }
 
+.footer .details a,
 .c-LinkBlock__Link {
-
+  display: block;
+  line-height: inherit;
 }
 
 .c-LinkBlock--connect {
   .c-LinkBlock__Heading {
-    margin-bottom: 20px;
   }
 }
 .link-block.connect h3 {
-  margin-bottom: 20px; // copied from above
 }
 .link-block.connect a {
   display: inline-block;
-  margin-right: 9px;
-  margin-left: 9px;
+  margin-right: 1em;
+  &:first-of-type {
+    margin-left: 9px;
+  }
 }
