--- a/styles/_comp.SiteFooter.less
+++ b/styles/_comp.SiteFooter.less
@@ -18,13 +18,6 @@
   .details {
     padding-top: 20px;
     font-weight: 600;
-
-    a {
-      display: block;
-      @media (max-width: 989px) {
-        margin-bottom: 6px;
-      }
-    }
   }
 
   .mobile-nav {
