--- a/styles/_comp.ui.NavBar.less
+++ b/styles/_comp.ui.NavBar.less
@@ -43,6 +43,7 @@
 .navigation-level2 a {
   display: inline-block;
   padding: 17px 24px;
+  line-height: 16px; // FIXME due to chevron icons in main nav causing bloated height
   color: inherit;
   @media (max-width: 1199px) {
     font-size: 14px;
