--- a/styles/_trumps.shame.less
+++ b/styles/_trumps.shame.less
@@ -19,11 +19,7 @@
 }
 
 
-// FIXME due to chevron icons in main nav causing bloated height
-.nav2,
-.c-NavBar--side {
-  a { line-height: 16px; }
-}
+
 
 
 
